--- a/static/css/quickEditor.css
+++ b/static/css/quickEditor.css
@@ -2208,7 +2208,8 @@ input[type="checkbox"] {
 .quickEditor.readOnly .quickEditor-container td .quickEditor-btn.quickEditor-black,
 .quickEditor.readOnly .quickEditor-container .paleGrayRows i,
 .quickEditor.readOnly .mega_drop_menu .menu_left:nth-of-type(1) .greybox li,
-.quickEditor.readOnly .quickEditor-container div:has(.autoTest_newLRID)>button {
+.quickEditor.readOnly .quickEditor-container div:has(.autoTest_newLRID)>button,
+.quickEditor.readOnly .rightBlock .store-icon-div i {
   pointer-events: none;
   background-color: rgba(230, 230, 230, 0.12) !important;
   color: rgba(0, 0, 0, .26) !important;
